--- a/memo2.tex
+++ b/memo2.tex
@@ -34,19 +34,27 @@
 \usepackage{needspace}
 
 % == 字体 ==
+\usepackage{pgffor}
 \usepackage{xeCJK,fontspec}
+\def\mymainfont{Source Han Serif SC}
+\def\mysansfont{Source Han Sans SC}
+\def\mymonofontlist{Sarasa Mono SC,Sarasa Term SC,Sarasa Fixed SC,Inziu Iosevka SC,Source Code Pro,Lucida Console,Consolas,Courier New}
+\foreach\testmonofont in \mymonofontlist {%
+    \IfFontExistsTF{\testmonofont}{\xdef\mymonofont{\testmonofont}\typeout{^^JSet Mono font to \mymonofont^^J}\breakforeach}{}
+}
+
 % 设置英文宋体、黑体、等宽字体
 \setmainfont[
     AutoFakeSlant=0.2,
     SmallCapsFont=TeX Gyre Termes,
     SmallCapsFeatures={Letters=SmallCaps}
-]{Source Han Serif SC}
-\setsansfont[AutoFakeSlant=0.2]{Source Han Sans SC}
-\setmonofont{Sarasa Mono SC}
+]{\mymainfont}
+\setsansfont[AutoFakeSlant=0.2]{\mysansfont}
+\setmonofont{\mymonofont}
 % 设置中文宋体、黑体、等宽字体
-\setCJKmainfont[AutoFakeSlant=0.2]{Source Han Serif SC}
-\setCJKsansfont[AutoFakeSlant=0.2]{Source Han Sans SC}
-\setCJKmonofont{Sarasa Mono SC}
+\setCJKmainfont[AutoFakeSlant=0.2]{\mymainfont}
+\setCJKsansfont[AutoFakeSlant=0.2]{\mysansfont}
+\setCJKmonofont{\mymonofont}
 % 使用更大的\textbullet
 \renewcommand{\labelitemi}{\raisebox{0.1em}{$\bullet$}}
 
@@ -258,6 +266,19 @@ The quick fox jumps over the lazy dog. % 正文
     SmallCapsFont=TeX Gyre Termes,
     SmallCapsFeatures={Letters=SmallCaps}
 ]{Source Han Serif SC}
+\end{lstlisting}
+
+根据系统已有的字体选择合适的字体
+
+\begin{lstlisting}[frame=single,style=customlatex,style=linewrap]
+\usepackage{pgffor}
+\usepackage{xeCJK,fontspec}
+\def\mymonofontlist{Sarasa Mono SC,Sarasa Term SC,Sarasa Fixed SC,Inziu Iosevka SC,Source Code Pro,Lucida Console,Consolas,Courier New}
+\foreach\testmonofont in \mymonofontlist {%
+    \IfFontExistsTF{\testmonofont}{\xdef\mymonofont{\testmonofont}\typeout{^^JSet Mono font to \mymonofont^^J}\breakforeach}{}
+}
+\setmonofont{\mymonofont}
+\setCJKmonofont{\mymonofont}
 \end{lstlisting}
 
 
@@ -475,6 +496,8 @@ y&=(x+1)(x-1)\\
 \end{aligned}\]
 \end{LTXexample}
 
+\needspace{10\baselineskip}
+
 \paragraph{微积分}\hspace{1pt}
 
 \begin{LTXexample}[pos=t,style=customlatex,style=linewrap]
@@ -490,6 +513,8 @@ y&=(x+1)(x-1)\\
 &=\frac{4\pi}{21}(2-\sqrt[4]{2})\\
 \end{aligned}\]
 \end{LTXexample}
+
+\needspace{15\baselineskip}
 
 \paragraph{行列式}\hspace{1pt}
 
